@@ -1,3 +1,8 @@
+2007-07-29  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/lcms.c: also calculate the checksum when loading
+	the RGB profile from disk (bug #456017).
+
 2007-07-27  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/jigsaw.c: applied patch from Aurimas Juška
